validator/openshift/frontend/dev-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: f343b4-dev
  name: validator-frontend
  annotations:
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"validator-frontend:dev","namespace":"f343b4-tools"},"fieldPath":"spec.template.spec.containers[?(@.name==\"container\")].image","pause":"false"}]
spec:
  selector:
    matchLabels:
      app: validator-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: validator-frontend
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/f343b4-tools/validator-frontend@sha256:d82d580c51d630c879df87b6d4f69dbcaf42e34ccf48e207db19f3aeebe9843b
          ports:
            - containerPort: 8080
              protocol: TCP
          env: []
      imagePullSecrets: []
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  paused: false
