validator/openshift/frontend/dev-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: validator-frontend
  namespace: f343b4-dev
  labels: {}
spec:
  to:
    kind: Service
    name: validator-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ""
  path: /
  port:
    targetPort: 5173
  alternateBackends: []
